[gd_scene load_steps=8 format=3 uid="uid://clixbctdjk3ry"]

[ext_resource type="FontFile" uid="uid://brjpktepn6ihe" path="res://fonts/Xolonium-Regular.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://n2q3jte6x06c" path="res://scripts/hud.gd" id="1_oo0fn"]
[ext_resource type="Texture2D" uid="uid://dd3gxdmgtaqul" path="res://art/powerups/shield_powerup.png" id="3_6fi6k"]
[ext_resource type="Texture2D" uid="uid://cglyu6vqe7au6" path="res://art/powerups/slowmo_powerup.png" id="4_uo2fv"]
[ext_resource type="Texture2D" uid="uid://bhcaypbdgwn3" path="res://art/powerups/scoreboost_powerup.png" id="5_uo2fv"]

[sub_resource type="InputEventAction" id="InputEventAction_oo0fn"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_5ysmq"]
events = [SubResource("InputEventAction_oo0fn")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="HeartContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -480.0
offset_right = -474.0
offset_bottom = 8.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -154.0
offset_right = 240.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 54
text = "Pulse Evade"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -191.0
offset_right = 66.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24
shortcut = SubResource("Shortcut_5ysmq")
text = "Start"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 18.0
offset_top = 27.0
offset_right = -369.0
offset_bottom = 105.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MadeBy" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -43.0
offset_right = 118.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "BSCS 3-6 | Final LAB Exam"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Section" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -74.0
offset_right = 118.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
text = "Made with ❤️ by Julius Raagas"

[node name="PowerUpHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 60.0
offset_bottom = 57.0

[node name="ShieldContainer" type="HBoxContainer" parent="PowerUpHUD"]
layout_mode = 0
offset_left = 345.0
offset_top = 131.0
offset_right = 451.0
offset_bottom = 189.0
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="PowerUpHUD/ShieldContainer"]
layout_mode = 2
texture = ExtResource("3_6fi6k")
expand_mode = 3

[node name="TimerLabel" type="Label" parent="PowerUpHUD/ShieldContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24

[node name="SlowmoContainer" type="HBoxContainer" parent="PowerUpHUD"]
layout_mode = 0
offset_left = 342.0
offset_top = 130.0
offset_right = 436.0
offset_bottom = 189.0
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="PowerUpHUD/SlowmoContainer"]
layout_mode = 2
texture = ExtResource("4_uo2fv")
expand_mode = 3

[node name="TimerLabel" type="Label" parent="PowerUpHUD/SlowmoContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24

[node name="ScoreBoostContainer" type="HBoxContainer" parent="PowerUpHUD"]
layout_mode = 0
offset_left = 340.0
offset_top = 129.0
offset_right = 434.0
offset_bottom = 188.0
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="PowerUpHUD/ScoreBoostContainer"]
layout_mode = 2
texture = ExtResource("5_uo2fv")
expand_mode = 3

[node name="TimerLabel" type="Label" parent="PowerUpHUD/ScoreBoostContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24

[node name="DifficultyButtons" type="CanvasLayer" parent="."]

[node name="EasyButton" type="Button" parent="DifficultyButtons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -98.5
offset_right = 66.0
offset_bottom = -51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24
text = "Easy"

[node name="MediumButton" type="Button" parent="DifficultyButtons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -23.5
offset_right = 66.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24
text = "Medium"

[node name="HardButton" type="Button" parent="DifficultyButtons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 51.5
offset_right = 66.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24
text = "Hard"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
